--- a/Computer.html
+++ b/Computer.html
@@ -22,9 +22,9 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></li>
+<ul class='toc'><li class='toc2'><a href='#Computer.play%20-%20Tutorial%203'>Computer.play - Tutorial 3</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Troubleshooting%20Sessions'>Troubleshooting Sessions</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Tutorials%20-%20week%209'>Tutorials - week 9</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -32,6 +32,10 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
+<h3><a class='anchor' name='Computer.play%20-%20Tutorial%203'>Computer.play - Tutorial 3</a></h3>
+
+<p>Our thrid and last tutorial will be on <strong>Monday, 6 of March</strong> at my office: <em>MRC/002</em>.<div class='warning'><span class='warninglabel'>WARNING:</span> Please bring your computer and code so that I can have an idea of your progress and so we can discuss your project in detail.</div><table>
+<tr><td>09:00<td>TOM HORNER<tr><td>09:15<td>ALAN FOWLER<tr><td>09:30<td>CHRISTOPHER MURPHY<tr><td>09:45<td>DOMINIC CRAMP<tr><td>10:00<td>FREDERICK WORDSWORTH<tr><td>10:15<td>JAN TAN<tr><td>10:30<td>WILLIAM BARNARDO<tr><td>10:45<td>GABRIEL WALKER<tr><td>11:00<td>BENJAMIN STRANGE<tr><td>11:15<td>THOMAS JAMES<tr><td>11:30<td>ELIZABETH PHIPPARD<tr><td>11:45<td>TOBIAS RANDALL-PALEY<tr><td>12:00<td>POPPY RICE<tr><td>13:30<td>FELCITY MARGERESON<tr><td>13:45<td>KATHARINE LOVELL<tr><td>14:00<td>ATHENE BROAD<tr><td>14:15<td>MATILDA GANNON<tr><td>14:30<td>SARAH PENDLETON<tr><td>14:45<td>EMILY SULLIVIN<tr><td>15:00<td>BARRINGTON BROOK<tr><td>15:15<td>ERIN ROBINSON<tr><td>15:30<td>CATHERINE ROBSON</table>
 <h3><a class='anchor' name='Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></h3>
 <div class='warning'><span class='warninglabel'>WARNING:</span> We now have dates for the presentation of your practical work!!</div>
 <p>We have now arrived at 2 dates for the Computer.play performances/installations:
@@ -40,10 +44,7 @@
 
 <p>We are having 2 troubleshooting sessions in preparation for the performances/installations:<ul>
 <li>TUESDAY, 7 MARCH, 9:30<li>FRIDAY, 24 MARCH, 14:00</ul>
-<h3><a class='anchor' name='Tutorials%20-%20week%209'>Tutorials - week 9</a></h3>
-
-<p>We are having our last tutorials on week 9:
-<p><strong>Tutorials - Monday, 6 March</strong><h2><a class='anchor' name='Module'>Module</a></h2>
+<h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
@@ -67,7 +68,6 @@
 
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
-<p>27/02/2017 <a href="https://www.york.ac.uk/music/news-and-events/events/research/2016-17/spring-week-7-a/">Workshop: Megumi Masaki - Piano and Electronics</a>
 <p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a>
 <p>26/04/2017 <a href="https://www.mstrcyork.org/people/jez-wells/">Research Seminar: Jez Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
