--- a/Computer.html
+++ b/Computer.html
@@ -22,7 +22,7 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Computer.play%20-%20Tutorial%203'>Computer.play - Tutorial 3</a></li>
+<ul class='toc'><li class='toc2'><a href='#Computer.play%20Event%201%20-%20Saturday,%2011%20March'>Computer.play Event 1 - Saturday, 11 March</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Troubleshooting%20Sessions'>Troubleshooting Sessions</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
@@ -32,13 +32,14 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='Computer.play%20-%20Tutorial%203'>Computer.play - Tutorial 3</a></h3>
+<h3><a class='anchor' name='Computer.play%20Event%201%20-%20Saturday,%2011%20March'>Computer.play Event 1 - Saturday, 11 March</a></h3>
 
-<p>Our thrid and last tutorial will be on <strong>Monday, 6 of March</strong> at my office: <em>MRC/002</em>.<div class='warning'><span class='warninglabel'>WARNING:</span> Please bring your computer and code so that I can have an idea of your progress and so we can discuss your project in detail.</div><table>
-<tr><td>09:00<td>TOM HORNER<tr><td>09:15<td>ALAN FOWLER<tr><td>09:30<td>CHRISTOPHER MURPHY<tr><td>09:45<td>DOMINIC CRAMP<tr><td>10:00<td>FREDERICK WORDSWORTH<tr><td>10:15<td>JAN TAN<tr><td>10:30<td>WILLIAM BARNARDO<tr><td>10:45<td>GABRIEL WALKER<tr><td>11:00<td>BENJAMIN STRANGE<tr><td>11:15<td>THOMAS JAMES<tr><td>11:30<td>ELIZABETH PHIPPARD<tr><td>11:45<td>TOBIAS RANDALL-PALEY<tr><td>12:00<td>POPPY RICE<tr><td>13:30<td>FELCITY MARGERESON<tr><td>13:45<td>KATHARINE LOVELL<tr><td>14:00<td>ATHENE BROAD<tr><td>14:15<td>MATILDA GANNON<tr><td>14:30<td>SARAH PENDLETON<tr><td>14:45<td>EMILY SULLIVIN<tr><td>15:00<td>BARRINGTON BROOK<tr><td>15:15<td>ERIN ROBINSON<tr><td>15:30<td>CATHERINE ROBSON</table>
-<h3><a class='anchor' name='Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></h3>
-<div class='warning'><span class='warninglabel'>WARNING:</span> We now have dates for the presentation of your practical work!!</div>
-<p>We have now arrived at 2 dates for the Computer.play performances/installations:
+<p>The first <code class='code prettyprint lang-sc'>Computer.play</code> event will be this <strong>Saturday, 11 of March</strong> at the <strong>Rymer Auditorium</strong>.
+<p>This is the schedule of events for Saturday:<table>
+<tr><td><strong>Computer.play</strong><td><strong>Event #1</strong><tr><td><strong>13:00</strong><td><em>Performance</em> by Tom Horner<tr><td><strong>14:00-15:30</strong><td><em>Installation</em> by:<tr><td><td>Dom Cramp<tr><td><td>Chris Murphy<tr><td><td>Freddy Wordsworth<tr><td><strong>16:00-17:30</strong><td><em>Installation</em> by:<tr><td><td>Will Barnardo<tr><td><td>Jan Tan<tr><td><strong>18:00</strong><td><em>Concert</em> with performances by:<tr><td><td>Ben Strange &amp; Gabriel Walker<tr><td><td>Toby Randall-Palley, Libby Phippard &amp; Poppy Rice<tr><td><td>Thomas James</table>
+<div class='warning'><span class='warninglabel'>WARNING:</span> PLEASE COME AND SUPPORT THE PEOPLE PRESENTING WORK!!! Also, feel free to spread the word and invite people to come along.</div><h3><a class='anchor' name='Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></h3>
+
+<p>We have now arrived at 2 dates for the Computer.play events:
 <p><strong>WEEK 9 - SATURDAY, 11 MARCH</strong>
 <p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
 
