--- a/Classes/Pgeom.html
+++ b/Classes/Pgeom.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,17 +19,17 @@
 <div id='summary'>geometric series pattern</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc'>Patterns.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Pseries.html">Pseries</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-embedInStream'>embedInStream</a> </li>
 <li class='toc3'><a href='#-grow'>grow</a> </li>
 <li class='toc3'><a href='#-length'>length</a> </li>
@@ -46,10 +45,10 @@
 <tr><td class='argumentname'>start<td class='argumentdesc'>
 <p>start value.<tr><td class='argumentname'>grow<td class='argumentdesc'>
 <p>multiplication factor.<tr><td class='argumentname'>length<td class='argumentdesc'>
-<p>number of values produced.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>number of values produced.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-embedInStream' href='./../Overviews/Methods.html#embedInStream'>embedInStream</a> (<span class='argstr'>inval</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-grow' href='./../Overviews/Methods.html#grow'>grow</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-grow' href='./../Overviews/Methods.html#grow'>grow</a> = value</h3>
@@ -95,4 +94,4 @@ Pbind(
 ).play;
 )</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pgeom.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pgeom.schelp</a><br>link::Classes/Pgeom::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pgeom.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pgeom.schelp</a><br>link::Classes/Pgeom::<br>sc version: 3.8.0</div></div></body></html>
