--- a/Computer.html
+++ b/Computer.html
@@ -22,8 +22,7 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Computer.play%20Event%201%20-%20Saturday,%2011%20March'>Computer.play Event 1 - Saturday, 11 March</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></li>
+<ul class='toc'><li class='toc2'><a href='#Dates%20for%20Performances/Installations'>Dates for Performances/Installations</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Troubleshooting%20Sessions'>Troubleshooting Sessions</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
@@ -32,14 +31,9 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='Computer.play%20Event%201%20-%20Saturday,%2011%20March'>Computer.play Event 1 - Saturday, 11 March</a></h3>
+<div class='note'><span class='notelabel'>NOTE:</span> REMINDER: The next troubleshooting session will be on <strong>Friday, 24th of March</strong>.</div><div class='note'><span class='notelabel'>NOTE:</span> REMINDER: The next <code class='code prettyprint lang-sc'>Computer.play</code> event will be on <strong>Thursday, 30th of March</strong>.</div><h3><a class='anchor' name='Dates%20for%20Performances/Installations'>Dates for Performances/Installations</a></h3>
 
-<p>The first <code class='code prettyprint lang-sc'>Computer.play</code> event will be this <strong>Saturday, 11 of March</strong> at the <strong>Rymer Auditorium</strong>.
-<p>This is the schedule of events for Saturday:<table>
-<tr><td><strong>Computer.play</strong><td><strong>Event #1</strong><tr><td><strong>13:00</strong><td><em>Performance</em> by Tom Horner<tr><td><strong>14:00-15:30</strong><td><em>Installation</em> by:<tr><td><td>Dom Cramp<tr><td><td>Chris Murphy<tr><td><td>Freddy Wordsworth<tr><td><strong>16:00-17:30</strong><td><em>Installation</em> by:<tr><td><td>Will Barnardo<tr><td><td>Jan Tan<tr><td><strong>18:00</strong><td><em>Concert</em> with performances by:<tr><td><td>Ben Strange &amp; Gabriel Walker<tr><td><td>Toby Randall-Palley, Libby Phippard &amp; Poppy Rice<tr><td><td>Thomas James</table>
-<div class='warning'><span class='warninglabel'>WARNING:</span> PLEASE COME AND SUPPORT THE PEOPLE PRESENTING WORK!!! Also, feel free to spread the word and invite people to come along.</div><h3><a class='anchor' name='Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></h3>
-
-<p>We have now arrived at 2 dates for the Computer.play events:
+<p>These are the 2 dates for the Computer.play events:
 <p><strong>WEEK 9 - SATURDAY, 11 MARCH</strong>
 <p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
 
@@ -72,7 +66,9 @@
 <p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a>
 <p>26/04/2017 <a href="https://www.mstrcyork.org/people/jez-wells/">Research Seminar: Jez Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
-<p>10/03/2017 Christina Kubisch: Electrical Walks in Manchester<pre class='code prettyprint lang-sc'>Computer.url("https://www.eventbrite.co.uk/e/cut-splice-festival-2017-manchester-electrical-walks-with-christina-kubisch-tickets-31260707618");</pre>
+<p>19/03/2017 Mainwaring/Reuben Duo, Tech Wednesday, Old Red Bus Station, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://www.facebook.com/TheOldRedBusStation/")</pre>
+
+<p>28/03/2017 Algorave, ODI Leeds, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://algorave.com/");</pre>
 
 <p><h3><a class='anchor' name='Links'>Links</a></h3>
 <pre class='code prettyprint lang-sc'>Computer.url("https://www.mstrcyork.org/"); //Music, Science and Technology Research Cluster (mstrc)
