--- a/Study Guides/Audio Analysis and Machine Listening.html
+++ b/Study Guides/Audio Analysis and Machine Listening.html
@@ -892,5 +892,5 @@ sympath = SinOsc.ar((rootnote + chord).midicps, 0, 0.4).mean;
 Out.ar(0,Pan2.ar(in, -0.5) + Pan2.ar(sympath, 0.5));
 }.play
 )</pre>
-<div class='note'><span class='notelabel'>NOTE:</span> Various examples, ideas, etc. have been taken or derived from the SC documentation, Paul Berg, David Cottle, Nick Collins, and lots of other people in the SuperCollider community.</div>
+<div class='note'><span class='notelabel'>NOTE:</span> Various examples, ideas, etc. have been taken or derived from the SC documentation, Nick Collins, Paul Berg, David Cottle and lots of other people in the SuperCollider community.</div>
 <p> <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp</a><br>link::Study Guides/Audio Analysis and Machine Listening::<br>sc version: 3.8.0</div></div></body></html>
