--- a/Classes/DelayL.html
+++ b/Classes/DelayL.html
@@ -1,58 +1,69 @@
-<html><head><title>DelayL</title><link rel='stylesheet' href='./../scdoc.css' type='text/css' /><link rel='stylesheet' href='./../frontend.css' type='text/css' /><link rel='stylesheet' href='./../custom.css' type='text/css' /><meta http-equiv='Content-Type' content='text/html; charset=UTF-8' /><script src='./../scdoc.js' type='text/javascript'></script><script src='./../docmap.js' type='text/javascript'></script><script src='./../prettify.js' type='text/javascript'></script><script src='./../lang-sc.js' type='text/javascript'></script><script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script><script type='text/javascript'>var helpRoot='./..';</script></head><ul id='menubar'></ul><body onload='fixTOC();prettyPrint()'><div class='contents'><div class='header'><div id='label'>SuperCollider CLASSES</div><div id='categories'><a href='./../Browse.html#UGens>Delays'>UGens>Delays</a></div><h1>DelayL</h1><div id='summary'>Simple delay line with linear interpolation.</div></div><div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Delays.sc'>Delays.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/DelayN.html">DelayN</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div><div id='related'>See also: <a href="./../Classes/DelayC.html">DelayC</a>, <a href="./../Classes/DelayN.html">DelayN</a>, <a href="./../Classes/BufDelayL.html">BufDelayL</a></div></div><div id='toc'>
+<html><head><title>DelayL</title>
+<link rel='stylesheet' href='./../scdoc.css' type='text/css' />
+<link rel='stylesheet' href='./../frontend.css' type='text/css' />
+<link rel='stylesheet' href='./../custom.css' type='text/css' />
+<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+<script src='./../scdoc.js' type='text/javascript'></script>
+<script src='./../docmap.js' type='text/javascript'></script>
+<script src='./../prettify.js' type='text/javascript'></script>
+<script src='./../lang-sc.js' type='text/javascript'></script>
+<script type='text/javascript'>var helpRoot='./..';</script>
+</head>
+<ul id='menubar'></ul>
+<body onload='fixTOC();prettyPrint()'>
+<div class='contents'>
+<div class='header'>
+<div id='label'>SuperCollider CLASSES</div>
+<div id='categories'><a href='./../Browse.html#UGens>Delays'>UGens>Delays</a></div>
+<h1>DelayL</h1>
+<div id='summary'>Simple delay line with linear interpolation.</div>
+</div>
+<div class='subheader'>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Delays.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Delays.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/DelayN.html">DelayN</a> : <a href="../Classes/PureUGen.html">PureUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='related'>See also: <a href="./../Classes/DelayC.html">DelayC</a>, <a href="./../Classes/DelayN.html">DelayN</a>, <a href="./../Classes/BufDelayL.html">BufDelayL</a></div>
+</div>
+<div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#inherited_class_methods'>Inherited class methods</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#inherited_instance_methods'>Inherited instance methods</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+</ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+</ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>Simple delay line with linear interpolation. See also
-<a href="./../Classes/DelayN.html">DelayN</a>  which uses no interpolation, and
-<a href="./../Classes/DelayC.html">DelayC</a>  which uses cubic interpolation. Cubic
-interpolation is more computationally expensive than linear,
-but more accurate.
-<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in = 0</span>, <span class='argstr'>maxdelaytime = 0.2</span>, <span class='argstr'>delaytime = 0.2</span>, <span class='argstr'>mul = 1</span>, <span class='argstr'>add = 0</span>)</h3>
+<p>Simple delay line with linear interpolation. See also <a href="./../Classes/DelayN.html">DelayN</a> which uses no interpolation, and <a href="./../Classes/DelayC.html">DelayC</a> which uses cubic interpolation. Cubic interpolation is more computationally expensive than linear, but more accurate.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in: 0</span>, <span class='argstr'>maxdelaytime: 0.2</span>, <span class='argstr'>delaytime: 0.2</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <div class='supmethod'>From superclass: <a href='./../Classes/DelayN.html'>DelayN</a></div>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*kr' href='./../Overviews/Methods.html#kr'>kr</a> (<span class='argstr'>in = 0</span>, <span class='argstr'>maxdelaytime = 0.2</span>, <span class='argstr'>delaytime = 0.2</span>, <span class='argstr'>mul = 1</span>, <span class='argstr'>add = 0</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*kr' href='./../Overviews/Methods.html#kr'>kr</a> (<span class='argstr'>in: 0</span>, <span class='argstr'>maxdelaytime: 0.2</span>, <span class='argstr'>delaytime: 0.2</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <div class='supmethod'>From superclass: <a href='./../Classes/DelayN.html'>DelayN</a></div>
-<div class='method'><h4>Arguments:</h4>
+<div class='method'>
+<p><h4>Arguments:</h4>
 <table class='arguments'>
-<tr><td class='argumentname'> in <td class='argumentdesc'>
-<p>The input signal.
-<tr><td class='argumentname'> maxdelaytime <td class='argumentdesc'>
-<p>The maximum delay time in seconds. used to initialize the delay buffer size.
-<tr><td class='argumentname'> delaytime <td class='argumentdesc'>
-<p>Delay time in seconds.
-<tr><td class='argumentname'> mul <td class='argumentdesc'>
-<p>Output will be multiplied by this value.
-<tr><td class='argumentname'> add <td class='argumentdesc'>
-<p>This value will be added to the output.
-</table></div><h3><a class='anchor' name='inherited_class_methods'>Inherited class methods</a></h3>
+<tr><td class='argumentname'>in<td class='argumentdesc'>
+<p>The input signal.<tr><td class='argumentname'>maxdelaytime<td class='argumentdesc'>
+<p>The maximum delay time in seconds. used to initialize the delay buffer size.<tr><td class='argumentname'>delaytime<td class='argumentdesc'>
+<p>Delay time in seconds.<tr><td class='argumentname'>mul<td class='argumentdesc'>
+<p>Output will be multiplied by this value.<tr><td class='argumentname'>add<td class='argumentdesc'>
+<p>This value will be added to the output.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='inherited_instance_methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
-
-<p><pre class='code prettyprint lang-sc'>
-(
-// <a class='clslnk' href='./../Classes/Dust.html'>Dust</a> randomly triggers <a class='clslnk' href='./../Classes/Decay.html'>Decay</a> to create an exponential
-// decay envelope for the <a class='clslnk' href='./../Classes/WhiteNoise.html'>WhiteNoise</a> input source
+<pre class='code prettyprint lang-sc'>(
+// Dust randomly triggers Decay to create an exponential
+// decay envelope for the WhiteNoise input source
 {
-z = <a class='clslnk' href='./../Classes/Decay.html'>Decay</a>.ar(<a class='clslnk' href='./../Classes/Dust.html'>Dust</a>.ar(1,0.5), 0.3, <a class='clslnk' href='./../Classes/WhiteNoise.html'>WhiteNoise</a>.ar);
-<a class='clslnk' href='./../Classes/DelayL.html'>DelayL</a>.ar(z, 0.2, 0.2, 1, z); // input is mixed with delay via the add input
+z = Decay.ar(Dust.ar(1,0.5), 0.3, WhiteNoise.ar);
+DelayL.ar(z, 0.2, 0.2, 1, z); // input is mixed with delay via the add input
 }.play
 )
 
 (
 // recursive application of delay.
 {
-z = <a class='clslnk' href='./../Classes/Decay2.html'>Decay2</a>.ar(<a class='clslnk' href='./../Classes/Dust.html'>Dust</a>.ar(1, 0.5), 0.01, 0.1, <a class='clslnk' href='./../Classes/Saw.html'>Saw</a>.ar(100 + [0, 1]));
-5.do { |i| z = <a class='clslnk' href='./../Classes/DelayL.html'>DelayL</a>.ar(<a class='clslnk' href='./../Classes/RLPF.html'>RLPF</a>.ar(z, <a class='clslnk' href='./../Classes/Rand.html'>Rand</a>(100, 3000), 0.03), 1, 1 / (2**i), 1, z * 0.5) };
+z = Decay2.ar(Dust.ar(1, 0.5), 0.01, 0.1, Saw.ar(100 + [0, 1]));
+5.do { |i| z = DelayL.ar(RLPF.ar(z, Rand(100, 3000), 0.03), 1, 1 / (2**i), 1, z * 0.5) };
 z
 }.play
-)
-</pre>
-<div class='doclink'>source: <a href='file:///Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/HelpSource/Classes/DelayL.schelp'>/Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/HelpSource/Classes/DelayL.schelp</a><br>link::Classes/DelayL::</div></div></body></html>
+)</pre>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/DelayL.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/DelayL.schelp</a><br>link::Classes/DelayL::<br>sc version: 3.8.0</div></div></body></html>
