--- a/Classes/SCMIR.html
+++ b/Classes/SCMIR.html
@@ -19,14 +19,14 @@
 <div id='summary'>SuperCollider Music Information Retrieval library main class</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/Classes/SCMIR.sc'>SCMIR.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/Classes/SCMIR.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/Classes/SCMIR.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/SCMIRAudioFile.html">SCMIRAudioFile</a>, <a href="./../Classes/SCMIRSimilarityMatrix.html">SCMIRSimilarityMatrix</a>, <a href="./../Classes/SCMIRLive.html">SCMIRLive</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*clearResources'>clearResources</a> </li>
 <li class='toc3'><a href='#*createARFF'>createARFF</a> </li>
 <li class='toc3'><a href='#*executabledirectory'>executabledirectory</a> </li>
@@ -59,15 +59,15 @@
 <li class='toc3'><a href='#*waitOnUnixCmd'>waitOnUnixCmd</a> </li>
 <li class='toc3'><a href='#*waitStatus'>waitStatus</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>by Nick Collins. 
 <p>This extension library (with additional plugins and language invoked executables) for SuperCollider demonstrates carrying out music information retrival tasks in SuperCollider for audio content analysis. You can extract features for an audio file in NRT mode, plot features, get similarity matrices, plot them, extract novelty curves from the similarity matrices and thus find section boundaries, and more. The library is robust to batch processing over larger databases of hundreds of audio files in overnight runs. 
 <p>By default, \tmp is used for storing temporary files required in calculation, which should be robust to network permissions on Mac and Linux. The SCMIR base class allows you to set an alternative base directory for storing SCMIRAudioFile analysis data (.scmirZ format). Note that file permissions can be an issue on network systems; for full access it is suggested that you work with a local copy of SuperCollider where you have write permissions. Do not try to analyze audio files from directories where you have no write access if you want to write out analysis files alongside them. <h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*clearResources' href='./../Overviews/Methods.html#clearResources'>clearResources</a> </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*createARFF' href='./../Overviews/Methods.html#createARFF'>createARFF</a> (<span class='argstr'>filename</span>, <span class='argstr'>numfeatures</span>, <span class='argstr'>classes</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*executabledirectory' href='./../Overviews/Methods.html#executabledirectory'>executabledirectory</a> </h3>
@@ -103,7 +103,7 @@
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*waitOnUnixCmd' href='./../Overviews/Methods.html#waitOnUnixCmd'>waitOnUnixCmd</a> (<span class='argstr'>command</span>, <span class='argstr'>limit: 2000</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*waitStatus' href='./../Overviews/Methods.html#waitStatus'>waitStatus</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>SCMIR.setTempDir("/Users/nickcollins/Desktop/SCMIRTest");
 
@@ -119,4 +119,4 @@ SCMIR.setFrameHop(512);  //default is 1024. Only these two numbers allowed for n
 
 SCMIR.setFrameHop(1024); //restore default</pre>
 
-<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/HelpSource/Classes/SCMIR.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/HelpSource/Classes/SCMIR.schelp</a><br>link::Classes/SCMIR::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/HelpSource/Classes/SCMIR.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SCMIR/SCMIRExtensions/HelpSource/Classes/SCMIR.schelp</a><br>link::Classes/SCMIR::<br>sc version: 3.8.0</div></div></body></html>
